--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
                 <div class="about-text">
                     <p>Soy profesor de gestión y comercio internacional con amplia experiencia en investigación económica, análisis de políticas y liderazgo académico. Mi trabajo se ha centrado en comprender el comercio internacional, los principios de gestión y su impacto en el crecimiento y desarrollo institucional.</p>
                     <p>A lo largo de mi carrera, he ocupado puestos de liderazgo en la Universidad de Puerto Rico, incluyendo Director Académico, Decano de la Escuela de Administración de Empresas, Director de la Editorial Universitaria y Rector del campus UPR Humacao. También he sido profesor invitado en universidades de Estados Unidos, Europa, África, América Latina y el Caribe.</p>
-                    <div class="education">
-                        <h3>Educación y Logros Académicos</h3>
-                        <ul>
-                            <li><span class="degree">Doctorado en Ciencias Administrativas</span> - Complutense University of Madrid, Spain (1991)</li>
-                            <li><span class="degree">Maestría en Administración Pública</span> - University of Puerto Rico, Río Piedras (1987)</li>
-                            <li><span class="degree">Diploma en Derechos Humanos Internacionales y Relaciones Internacionales</span> - University of Strasbourg, France (1989)</li>
-                            <li><span class="degree">Estudios Especializados en Comercio Internacional y Economía</span> - University of South Carolina, USA (1994) and Memphis, Tennessee, USA (1997)</li>
-                            <li><span class="degree">Licenciatura en Ciencias Sociales</span> - University of Puerto Rico, Río Piedras (1985)</li>
-                        </ul>
-                    </div>
+<!--                    <div class="education">-->
+<!--                        <h3>Educación y Logros Académicos</h3>-->
+<!--                        <ul>-->
+<!--                            <li><span class="degree">Doctorado en Ciencias Administrativas</span> - Complutense University of Madrid, Spain (1991)</li>-->
+<!--                            <li><span class="degree">Maestría en Administración Pública</span> - University of Puerto Rico, Río Piedras (1987)</li>-->
+<!--                            <li><span class="degree">Diploma en Derechos Humanos Internacionales y Relaciones Internacionales</span> - University of Strasbourg, France (1989)</li>-->
+<!--                            <li><span class="degree">Estudios Especializados en Comercio Internacional y Economía</span> - University of South Carolina, USA (1994) and Memphis, Tennessee, USA (1997)</li>-->
+<!--                            <li><span class="degree">Licenciatura en Ciencias Sociales</span> - University of Puerto Rico, Río Piedras (1985)</li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
                 </div>
             </div>
         </section>
@@ -100,8 +100,10 @@
         <!-- Vision Section - New -->
         <section id="vision" class="section vision-section">
             <div class="section-header">
-                <h2>Visión: Acción y Transformación</h2>
-                <p class="section-subtitle">Construyendo sobre la tradición mientras abrazamos la innovación a través de la acción y la transformación</p>
+                <h2 >Vision: Acción y Transformación</h2>
+                <p class="section-subtitle ">Reposicionar la UPR como un
+                    pilar del desarrollo económico, científico y cultural de Puerto Rico, con una presencia global
+                    más fuerte y una gobernanza eficiente.</p>
             </div>
             <div class="vision-statement">
                 <h3>El Futuro de Nuestra Universidad</h3>
@@ -392,4 +394,4 @@
 
     <script src="js/script.js"></script>
 </body>
-</html> 
+</html>
