--- a/index.html
+++ b/index.html
@@ -107,28 +107,83 @@
             </div>
             <div class="vision-statement">
                 <h3>El Futuro de Nuestra Universidad</h3>
-                <p>Como líder en administración académica, visualizo un futuro donde nuestra institución se sitúe en la intersección de la excelencia académica tradicional y la innovación audaz. Mi experiencia en gestión y comercio internacional proporciona una perspectiva única sobre el crecimiento sostenible y la asignación de recursos que beneficiará a toda nuestra comunidad académica.</p>
+                <p>La Universidad de Puerto Rico (UPR) se encuentra en un momento crucial de transformación.
+                    Para consolidarse como una institución de vanguardia en la educación superior, debe
+                    evolucionar con una visión estratégica que equilibre innovación, excelencia académica,
+                    sostenibilidad financiera y pertinencia social. Mi compromiso es reposicionar la UPR como un
+                    pilar del desarrollo económico, científico y cultural de Puerto Rico, con una presencia global
+                    más fuerte y una gobernanza eficiente.</p>
                 <div class="vision-pillars">
                     <div class="vision-pillar">
                         <div class="icon"><i class="fas fa-graduation-cap"></i></div>
-                        <h4>Excelencia Académica</h4>
-                        <p>Fortaleciendo nuestro compromiso con la investigación académica rigurosa y la enseñanza sobresaliente.</p>
-                    </div>
-                    <div class="vision-pillar">
-                        <div class="icon"><i class="fas fa-globe"></i></div>
-                        <h4>Perspectiva Global</h4>
-                        <p>Ampliando nuestras asociaciones internacionales y preparando a los estudiantes para la ciudadanía global.</p>
-                    </div>
-                    <div class="vision-pillar">
-                        <div class="icon"><i class="fas fa-balance-scale"></i></div>
-                        <h4>Sostenibilidad Financiera</h4>
-                        <p>Asegurando una gestión responsable de los recursos mientras se amplían las oportunidades para todos los estudiantes.</p>
+                        <h4>Excelencia Académica y Relevancia Curricular</h4>
+                        <ul>
+                            <li>Modernización y alineamiento de la oferta académica</li>
+                           <li>Implementación de modelos educativos flexibles</li>
+                            <li>Fortalecimiento de la educación interdisciplinaria</li>
+                            <li>Integración de metodologías de enseñanza innovadoras</li>
+                        </ul>
                     </div>
                     <div class="vision-pillar">
                         <div class="icon"><i class="fas fa-handshake"></i></div>
-                        <h4>Compromiso Comunitario</h4>
-                        <p>Fortaleciendo los lazos con nuestra comunidad local a través de una colaboración significativa.</p>
+                        <h4>Liderazgo en Investigación y Desarrollo</h4>
+                        <ul>
+                            <li>Potenciación de la UPR como un centro de investigación líder en el Caribe y
+                                Latinoamérica</li>
+                            <li>Expansión del acceso a fondos federales y privados</li>
+                            <li>Creación de centros de innovación y laboratorios de investigación aplicada</li>
+                            <li>Optimización del sistema de patentes y propiedad intelectual</li>
+                        </ul>
                     </div>
+                    <div class="vision-pillar">
+                        <div class="icon"><i class="fas fa-chart-line"></i></div>
+                        <h4>Sostenibilidad Financiera y Autonomía Institucional</h4>
+                        <ul>
+                            <li>Aumento de fondos externos</li>
+                            <li>Expansión de programas de educación continua y certificaciones
+                                especializadas</li>
+                            <li>Monetización de activos estratégicos</li>
+                            <li>Expansión de la práctica intramural</li>
+                            <li>Expansión del Fondo Dotal UPR</li>
+                            <li>Reducción de costos operacionales</li>
+                        </ul>
+                    </div>
+
+                </div> <div class="vision-pillars">
+                    <div class="vision-pillar">
+                        <div class="icon"><i class="fas fa-globe"></i></div>
+                        <h4>Internacionalización y Expansión de la UPR</h4>
+                        <ul>
+                            <li>Posicionamiento y mercado de la UPR en mercados globales</li>
+                            <li>Creación de una unidad de expansión internacional</li>
+                            <li>Desarrollo de programas de doble titulación y certificaciones internacionales</li>
+                            <li>Atracción de estudiantes internacionales mediante programas de movilidad,
+                                becas y oferta académica</li>
+                        </ul>
+                    </div>
+                    <div class="vision-pillar">
+                        <div class="icon"><i class="fas fa-lightbulb"></i></div>
+                        <h4>Innovación en la Gobernanza y Administración Universitaria</h4>
+                        <ul>
+                            <li>Creación de la figura del Provost o Gerente Operacional</li>
+                            <li>Implementación de un sistema de gobernanza</li>
+                            <li>Digitalización total de los procesos administrativos y académicos</li>
+                            <li>Transparencia y rendición de cuentas</li>
+                        </ul>
+                    </div>
+                    <div class="vision-pillar">
+                        <div class="icon"><i class="fas fa-people-carry"></i></div>
+                        <h4>Compromiso con la Comunidad y el Desarrollo de Puerto Rico</h4>
+                        <ul>
+                            <li>Establecer una estrecha relación con los miembros del gabinete económico
+                                del gobierno de Puerto Rico</li>
+                            <li>Transformación de la UPR en un motor de desarrollo económico</li>
+                            <li>Creación del Centro de Negocios para el Desarrollo Económico</li>
+                            <li>Expansión de la oferta educativa para adultos mayores</li>
+                            <li>Fomento de la sostenibilidad</li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
         </section>
