--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>Profesor de Gestión y Comercio Internacional</p>
         </div>
         <ul>
-            <li><a href="#home" class="nav-link active"><i class="fas fa-home"></i> <span>Inicio</span></a></li>
+            <li><a href="#home" class="nav-link active"><i class="fas fa-home"></i> <span>Inicio</span></a></li>    
             <li><a href="#about" class="nav-link"><i class="fas fa-user"></i> <span>Sobre Mí</span></a></li>
             <li><a href="#vision" class="nav-link"><i class="fas fa-lightbulb"></i> <span>Visión</span></a></li>
             <li><a href="#research" class="nav-link"><i class="fas fa-flask"></i> <span>Investigación</span></a></li>
@@ -83,16 +83,6 @@
                 <div class="about-text">
                     <p>Soy profesor de gestión y comercio internacional con amplia experiencia en investigación económica, análisis de políticas y liderazgo académico. Mi trabajo se ha centrado en comprender el comercio internacional, los principios de gestión y su impacto en el crecimiento y desarrollo institucional.</p>
                     <p>A lo largo de mi carrera, he ocupado puestos de liderazgo en la Universidad de Puerto Rico, incluyendo Director Académico, Decano de la Escuela de Administración de Empresas, Director de la Editorial Universitaria y Rector del campus UPR Humacao. También he sido profesor invitado en universidades de Estados Unidos, Europa, África, América Latina y el Caribe.</p>
-<!--                    <div class="education">-->
-<!--                        <h3>Educación y Logros Académicos</h3>-->
-<!--                        <ul>-->
-<!--                            <li><span class="degree">Doctorado en Ciencias Administrativas</span> - Complutense University of Madrid, Spain (1991)</li>-->
-<!--                            <li><span class="degree">Maestría en Administración Pública</span> - University of Puerto Rico, Río Piedras (1987)</li>-->
-<!--                            <li><span class="degree">Diploma en Derechos Humanos Internacionales y Relaciones Internacionales</span> - University of Strasbourg, France (1989)</li>-->
-<!--                            <li><span class="degree">Estudios Especializados en Comercio Internacional y Economía</span> - University of South Carolina, USA (1994) and Memphis, Tennessee, USA (1997)</li>-->
-<!--                            <li><span class="degree">Licenciatura en Ciencias Sociales</span> - University of Puerto Rico, Río Piedras (1985)</li>-->
-<!--                        </ul>-->
-<!--                    </div>-->
                 </div>
             </div>
         </section>
@@ -134,7 +124,7 @@
         </section>
 
         <!-- Research Section - Enhanced -->
-        <section id="research" class="section research-section">
+        <!-- <section id="research" class="section research-section">
             <div class="section-header">
                 <h2>Enfoque de Investigación</h2>
                 <p class="section-subtitle">Explorando la intersección entre gestión, comercio internacional y educación superior</p>
@@ -161,7 +151,7 @@
                     <p>Desarrollo de marcos para comprender las influencias geopolíticas en el liderazgo y la gobernanza institucional.</p>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Publications Section - Redesigned -->
         <section id="publications" class="section publications-section">
@@ -243,56 +233,6 @@
                 <h2>Experiencia de Liderazgo</h2>
                 <p class="section-subtitle">Un historial de administración académica exitosa</p>
             </div>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-date">2017-2019</div>
-                    <div class="timeline-content">
-                        <h3>Rector</h3>
-                        <h4>Universidad de Puerto Rico, Campus de Humacao</h4>
-                        <p>Dirigió el campus de Humacao del sistema de la Universidad de Puerto Rico, supervisando programas académicos, asuntos del profesorado y operaciones del campus.</p>
-                        <div class="leadership-badge">
-                            <i class="fas fa-star"></i>
-                            <span>Liderazgo Superior</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-date">2011-2012</div>
-                    <div class="timeline-content">
-                        <h3>Asistente del Presidente</h3>
-                        <h4>Universidad de Puerto Rico</h4>
-                        <p>Sirvió como asesor clave del Presidente del sistema de la Universidad de Puerto Rico, contribuyendo a la planificación estratégica y el desarrollo de políticas.</p>
-                        <div class="leadership-badge">
-                            <i class="fas fa-star"></i>
-                            <span>Liderazgo Ejecutivo</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-date">2004-2007</div>
-                    <div class="timeline-content">
-                        <h3>Decano, Escuela de Administración de Empresas</h3>
-                        <h4>Universidad de Puerto Rico</h4>
-                        <p>Dirigió la Escuela de Administración de Empresas, supervisando programas académicos, desarrollo del profesorado e iniciativas estratégicas para mejorar la reputación y efectividad de la escuela.</p>
-                        <div class="leadership-badge">
-                            <i class="fas fa-star"></i>
-                            <span>Liderazgo Académico</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-date">2009-2011</div>
-                    <div class="timeline-content">
-                        <h3>Director Ejecutivo, Editorial Universitaria</h3>
-                        <h4>Universidad de Puerto Rico</h4>
-                        <p>Dirigió la Editorial Universitaria, supervisando la publicación de obras académicas y gestionando operaciones editoriales.</p>
-                        <div class="leadership-badge">
-                            <i class="fas fa-star"></i>
-                            <span>Liderazgo Administrativo</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="achievement-markers">
                 <div class="achievement-marker">
                     <div class="icon"><i class="fas fa-users"></i></div>
@@ -316,8 +256,45 @@
                     </div>
                 </div>
             </div>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-date">2017-2019</div>
+                    <div class="timeline-content">
+                        <h3>Rector</h3>
+                        <h4>Universidad de Puerto Rico, Campus de Humacao</h4>
+                        <p>Dirigió el campus de Humacao del sistema de la Universidad de Puerto Rico, supervisando programas académicos, asuntos del profesorado y operaciones del campus.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">2011-2012</div>
+                    <div class="timeline-content">
+                        <h3>Asistente del Presidente</h3>
+                        <h4>Universidad de Puerto Rico</h4>
+                        <p>Sirvió como asesor clave del Presidente del sistema de la Universidad de Puerto Rico, contribuyendo a la planificación estratégica y el desarrollo de políticas.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">2004-2007</div>
+                    <div class="timeline-content">
+                        <h3>Decano, Escuela de Administración de Empresas</h3>
+                        <h4>Universidad de Puerto Rico</h4>
+                        <p>Dirigió la Escuela de Administración de Empresas, supervisando programas académicos, desarrollo del profesorado e iniciativas estratégicas para mejorar la reputación y efectividad de la escuela.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">2009-2011</div>
+                    <div class="timeline-content">
+                        <h3>Director Ejecutivo, Editorial Universitaria</h3>
+                        <h4>Universidad de Puerto Rico</h4>
+                        <p>Dirigió la Editorial Universitaria, supervisando la publicación de obras académicas y gestionando operaciones editoriales.</p>
+                </div>
+            </div>
+            <div class="view-more-container">
+                <a href="#" class="btn secondary">Ver Resume</a>
+            </div>
         </section>
-
+        
+        
         <!-- Contact Section - Enhanced -->
         <section id="contact" class="section contact-section">
             <div class="section-header">
