--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <li><a href="#home" class="nav-link active"><i class="fas fa-home"></i> <span>Inicio</span></a></li>    
             <li><a href="#about" class="nav-link"><i class="fas fa-user"></i> <span>Sobre Mí</span></a></li>
             <li><a href="#vision" class="nav-link"><i class="fas fa-lightbulb"></i> <span>Visión</span></a></li>
-            <li><a href="#research" class="nav-link"><i class="fas fa-flask"></i> <span>Investigación</span></a></li>
-            <li><a href="#publications" class="nav-link"><i class="fas fa-book"></i> <span>Publicaciones</span></a></li>
+            <li><a href="#publications" class="nav-link"><i class="fas fa-book"></i> <span>Publicaciones</span></a></xli>
             <li><a href="#leadership" class="nav-link"><i class="fas fa-award"></i> <span>Liderazgo</span></a></li>
             <li><a href="#contact" class="nav-link"><i class="fas fa-envelope"></i> <span>Contacto</span></a></li>
         </ul>
@@ -81,8 +80,8 @@
                     </div>
                 </div>
                 <div class="about-text">
-                    <p>Soy profesor de gestión y comercio internacional con amplia experiencia en investigación económica, análisis de políticas y liderazgo académico. Mi trabajo se ha centrado en comprender el comercio internacional, los principios de gestión y su impacto en el crecimiento y desarrollo institucional.</p>
-                    <p>A lo largo de mi carrera, he ocupado puestos de liderazgo en la Universidad de Puerto Rico, incluyendo Director Académico, Decano de la Escuela de Administración de Empresas, Director de la Editorial Universitaria y Rector del campus UPR Humacao. También he sido profesor invitado en universidades de Estados Unidos, Europa, África, América Latina y el Caribe.</p>
+                    <p>El Dr. Héctor A. Ríos Maury es Catedrático en Gerencia y Comercio Internacional en la Facultad de Administración de Empresas del Recinto de Río Piedras de la Universidad de Puerto Rico. Su distinguida carrera académica incluye posiciones de liderazgo como Director Académico, Decano, Director de la Editorial Universitaria y Rector en instituciones estatales y privadas.</p>
+                    <p>Con formación académica en universidades de Puerto Rico, Estados Unidos, España y Francia, el Dr. Ríos Maury ha sido clasificado como Scholarly Practitioner, un rango académico óptimo en los procesos de acreditación de su facultad. Es autor o coautor de 7 libros, decenas de artículos profesionales y más de 250 columnas de opinión. Su experiencia incluye conferencias y docencia como profesor invitado en universidades de Estados Unidos, Europa, África, Latinoamérica y el Caribe, además de ejercer como consultor organizacional y analista en medios de comunicación.</p>
                 </div>
             </div>
         </section>
@@ -353,7 +352,7 @@
         <!-- Contact Section - Enhanced -->
         <section id="contact" class="section contact-section">
             <div class="section-header">
-                <h2>Contacto</h2>
+                <h2>Sugerencias y Comentarios</h2>
                 <p class="section-subtitle">Póngase en contacto para discutir oportunidades de liderazgo académico y colaboración</p>
             </div>
             <div class="contact-content">
@@ -377,29 +376,6 @@
                     </div>
                     <button type="submit" class="btn primary">Enviar Mensaje</button>
                 </form>
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <p>hector.rios5@upr.edu</p>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <p>+1 (787) 642-9558</p>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <p>San Juan, Puerto Rico</p>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-university"></i>
-                        <p>Oficina: Universidad de Puerto Rico, Campus de Río Piedras, Escuela de Administración de Empresas</p>
-                    </div>
-                    <div class="social-links">
-                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="social-icon"><i class="fas fa-graduation-cap"></i></a>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
