--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#home" class="nav-link active"><i class="fas fa-home"></i> <span>Inicio</span></a></li>
             <li><a href="#about" class="nav-link"><i class="fas fa-user"></i> <span>Sobre Mí</span></a></li>
             <li><a href="#vision" class="nav-link"><i class="fas fa-lightbulb"></i> <span>Visión</span></a></li>
-            <li><a href="#publications" class="nav-link"><i class="fas fa-book"></i> <span>Publicaciones</span></a></xli>
+            <li><a href="#publications" class="nav-link"><i class="fas fa-book"></i> <span>Publicaciones</span></a></li>
             <li><a href="#leadership" class="nav-link"><i class="fas fa-award"></i> <span>Liderazgo</span></a></li>
             <li><a href="#contact" class="nav-link"><i class="fas fa-envelope"></i> <span>Contacto</span></a></li>
         </ul>
