--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <li><a href="#leadership" class="nav-link"><i class="fas fa-award"></i> <span>Liderazgo</span></a></li>
             <li><a href="#contact" class="nav-link"><i class="fas fa-envelope"></i> <span>Contacto</span></a></li>
         </ul>
-        <div class="social-nav">
+        <!-- <div class="social-nav">
             <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
             <a href="#" class="social-icon"><i class="fas fa-graduation-cap"></i></a>
-        </div>
+        </div> -->
     </nav>
 
     <!-- Mobile Navigation Toggle -->
@@ -59,10 +59,10 @@
                     <a href="#leadership" class="btn secondary">Experiencia de Liderazgo</a>
                 </div>
             </div>
-            <div class="scroll-indicator">
+            <!-- <div class="scroll-indicator">
                 <span>Desplácese para explorar</span>
                 <i class="fas fa-chevron-down"></i>
-            </div>
+            </div> -->
         </section>
         <!-- About Section - Redesigned -->
         <section id="about" class="section about-section">
@@ -222,8 +222,8 @@
         <!-- Publications Section - Redesigned -->
         <section id="publications" class="section publications-section">
             <div class="section-header">
-                <h2>Publicaciones Seleccionadas</h2>
-                <p class="section-subtitle">Un legado de contribución académica</p>
+                <h2>Noticias y Publicaciones</h2>
+                <p class="section-subtitle">Artículos académicos, libros y contribuciones al conocimiento en gestión, comercio internacional y liderazgo</p>
             </div>
             <div class="publications-filter">
                 <button class="filter-btn active" data-filter="all">Todas las Publicaciones</button>
