--- a/index.html
+++ b/index.html
@@ -372,10 +372,10 @@
             <div class="contact-content">
                 <form id="contact-form">
                     <h3>Enviar un Mensaje</h3>
-                    <div class="form-group">
-                        <label for="name">Nombre:</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
+<!--                    <div class="form-group">-->
+<!--                        <label for="name">Nombre:</label>-->
+<!--                        <input type="text" id="name" name="name" required>-->
+<!--                    </div>-->
                     <div class="form-group">
                         <label for="email">Correo Electrónico:</label>
                         <input type="email" id="email" name="email" required>
@@ -388,7 +388,7 @@
                         <label for="message">Mensaje:</label>
                         <textarea id="message" name="message" rows="5" required></textarea>
                     </div>
-                    <button type="submit" class="btn primary">Enviar Mensaje</button>
+                    <button type="submit" class="btn primary" id="contact-submit">Enviar Mensaje</button>
                 </form>
             </div>
         </section>
