--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 </div>
             </div>
             <div class="view-more-container">
-                <a href="#" class="btn secondary">Ver Resume</a>
+                <a href="http://riosmaurypresidenteupr.info/files/CV_HRM_2024.pdf" class="btn secondary">Ver Resumé</a>
             </div>
         </section>
 
